# loganalysis_agent

./: .gitignore  AUMOBO_LogDiag_PRD.docx  CLAUDE.md  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: golden_paths.yaml  logdiag_params.yaml
docs/log_diagnosis/: README.md  golden_path_guide.md
launch/: logdiag.launch
msg/: DiagResult.msg
scripts/: logdiag_node.py
src/logdiag/: node.py
src/logdiag/conversation/: manager.py
src/logdiag/diagnosis/: golden_path_loader.py  prompt_builder.py
src/logdiag/llm_engine/: __init__.py  base.py  cloud_claude.py  cloud_gemini.py  cloud_openai.py  local_ollama.py
src/logdiag/tools/: log_fetcher.py
srv/: LogDiagQuery.srv
test/: TEST_SPEC.md  test_conversation_manager.py  test_golden_path_loader.py  test_llm_engines.py  test_prompt_builder.py
test/sample_logs/: localization_missing_maploading.txt  localization_normal.txt
