<?xml version="1.0"?>
<package format="2">
  <name>loganalysis_agent</name>
  <version>0.1.0</version>
  <description>AUMOBO Log-Based Diagnostic AI Service (LogDiag)</description>
  <maintainer email="wilson@aumobo.com">Wilson</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
